add sku controller
