# docs/swagger.json
@@ -1,18 +1,18 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "A Brand service API in Go using Gin framework",
-        "title": "Brand Service API",
+        "description": "A Inventory service API in Go using Gin framework",
+        "title": "Inventory Service API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8888",
     "basePath": "/api",
     "paths": {
-        "/brands": {
+        "/brand": {
             "get": {
-                "description": "Return list of brands.",
-                "summary": "Get All brands.",
+                "description": "Return list of brand.",
+                "summary": "Get All brand.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -23,17 +23,17 @@
                 }
             }
         },
-        "/brands/{brandId}": {
+        "/brand/{brandId}": {
             "get": {
                 "description": "Return the tahs whoes brandId valu mathes id.",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get Single brands by id.",
+                "summary": "Get Single brand by id.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "update brands by id",
+                        "description": "update brand by id",
                         "name": "brandId",
                         "in": "path",
                         "required": true
@@ -43,7 +43,33 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/golang-crud-gin_pkg_brand_data_response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/sku/{skuId}": {
+            "get": {
+                "description": "Return the tahs whoes skuId valu mathes id.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Single sku by id.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "update sku by id",
+                        "name": "skuId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/golang-crud-gin_pkg_sku_data_response.Response"
                         }
                     }
                 }
@@ -51,7 +77,19 @@
         }
     },
     "definitions": {
-        "response.Response": {
+        "golang-crud-gin_pkg_brand_data_response.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "golang-crud-gin_pkg_sku_data_response.Response": {
             "type": "object",
             "properties": {
                 "code": {
